dgm-lib v2.3.x
 * Bumped to SFML v2.6.1
 * Added load helpers to `dgm::Utility` that can be used as load callbacks for `dgm::ResourceManager`
 * Removed `dgm::AbstractController`
 * Removed all deprecated methods
 * Reworked `dgm::App` and `dgm::AppState`
	* `isTransparent` and `getClearColor` are no longer a virtual methods, they are replaced by `dgm::AppStateConfig`
		* `isTransparent` was broken down into `shouldUpdateUnderlyingState` and `shouldDrawUnderlyingState` - first allows you to specify whether input and update methods should be executed for the state under top state. The second does the same for draw method. If multiple states are transparent in this way, the effect is applied recursively
	* `dgm::AppState::restoreFocus` is not replaced with `restoreFocusImpl`. In addition, `loseFocusImpl` has been added. `dgm::AppState` also has a protected member `hasFocus` to test whether the state is currently the top one or not (only top state has focus). That one, one can test if they are updated because the state is on the top or because the currently top state is transparent.
	* `dgm::App::popState` now accepts optional message parameter that is then passed down to `dgm::AppState::restoreStateImpl`
 * Reworked `dgm::Controller`
	* Gamepad deadzones reworked
	* Methods renamed
	* `releaseInput` now affects axii too if you read them via `isInputToggled`
	* Documentation revisited
 * Fixed screenshot under transparent app state to be properly scaled if resolution changes

dgm-lib v2.2.5
 * Added const iterator interface to `dgm::DynamicBuffer`
 * Fixed `dgm::Camera` being positioned to a random position upon construction
	* Now it's center is half of the resolution, so it sees a rectangle defined as `[0, 0, width, height]`

dgm-lib v2.2.4
 * Added method `dgm::ResourceManager::getMutable` so the stored resources can be modified if necessary

dgm-lib v2.2.3
 * Added method `dgm::Path<TileNavPoint>::getLength()`
 * `dgm::TileNavmesh::getPath` was marked deprecated